--- a/App/ClientApp/package.json
+++ b/App/ClientApp/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~8.2.14",
     "@kolkov/angular-editor": "^1.1.3",
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
+    "@syncfusion/ej2-angular-richtexteditor": "^18.3.40",
     "@tomblue/ng2-bootstrap-modal": "^1.1.2",
     "angular-font-awesome": "^3.1.2",
     "angular-gridster2": "^8.2.0",
