get static as well as dynamic widgets by page type id in single api

--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -137,6 +137,9 @@
     <Compile Include="FnGetParentAndChildTenant_Result.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="FnGetStaticAndDynamicWidgets_Result.cs">
+      <DependentUpon>NISDataContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="FnUserTenant_Result.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
