--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScheduleManager.cs" />
     <Compile Include="TenantContactManager.cs" />
+    <Compile Include="TenantTransactionDataManager.cs" />
     <Compile Include="TenantUserManager.cs" />
     <Compile Include="WidgetManager.cs" />
     <Compile Include="RoleManager.cs" />
