widget bug fixes

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -95,7 +95,9 @@
     <Compile Include="Enum\SearchMode.cs" />
     <Compile Include="Enum\SortOrder.cs" />
     <Compile Include="Common\SortParameter.cs" />
+    <Compile Include="GroupManagerReport.cs" />
     <Compile Include="IncomeSources.cs" />
+    <Compile Include="InstanceManagerReport.cs" />
     <Compile Include="MultiTenantUserRoleAccess.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="PageWidget.cs" />
