statement generation with dynamic widgets added also minor changes related to get dynamic widgets api as well as tenant transaction data apis

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Country.cs" />
     <Compile Include="CustomerInformation.cs" />
     <Compile Include="DashboardData.cs" />
+    <Compile Include="DynamicWidget\DynamicWidgetFilterEntity.cs" />
     <Compile Include="DynamicWidget\DynamicWidgetTableEntity.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="EntityFieldMap.cs" />
@@ -157,6 +158,7 @@
     <Compile Include="TransactionData\SubscriptionSpend.cs" />
     <Compile Include="TransactionData\SubscriptionSummary.cs" />
     <Compile Include="TransactionData\SubscriptionUsage.cs" />
+    <Compile Include="TransactionData\TransactionDataSearchParameter.cs" />
     <Compile Include="TransactionData\UserSubscription.cs" />
     <Compile Include="TransactionData\VendorSubscription.cs" />
     <Compile Include="User.cs" />
