Dynamic html widget implmentation in actual statement generation process as well as some performance related changes in statement generation process

--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -341,6 +341,9 @@
     <Compile Include="View_PageRecord.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="View_PageWidgetMapRecord.cs">
+      <DependentUpon>NISDataContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="View_ScheduleLog.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
