HTML Statement archival process api added as well as some getting batch records while statement re-generation process resolved.

--- a/API/Web.config
+++ b/API/Web.config
@@ -59,6 +59,7 @@
     <!--NodeJS-->
     <add key="NodeJSAPIURL" value="http://192.168.100.7:3000/CreateDynamicVideo" />
     <add key="ThreadCountToGenerateStatementParallel" value="10" />
+    <add key="MinimumArchivalPeriodDays" value="30" />
     <add key="ThreadCountDynamicScene" value="1" />
     <add key="ThreadInterval" value="15" />
   </appSettings>
