--- a/Utility/packages.config
+++ b/Utility/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Pdfcrowd.Official" version="4.12.0" targetFramework="net461" />
   <package id="System.Drawing.Common" version="4.7.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
