statement generator scheduler (cloud as well as in window service) related changes

--- a/SchedulerWindowService/App.config
+++ b/SchedulerWindowService/App.config
@@ -8,6 +8,9 @@
     <add key="ApiBaseAddress" value="http://localhost/API/"/>
     <!--<add key="ApiBaseAddress" value="http://nisqa-api.azurewebsites.net/"/>-->
     <!--<add key="ApiBaseAddress" value="https://nis-app.azurewebsites.net/"/>-->
+  
+    <add key="TenantCode" value="fc9366f8-cd57-4dbc-886d-94f4e8cb1550"/>
+  
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
