get dynamic widgets api related issue resolved. -- did not getting data properly as per page type id

--- a/API/Web.config
+++ b/API/Web.config
@@ -146,10 +146,10 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
 
-    <staticContent>
+    <!--<staticContent>
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
-    </staticContent>
+    </staticContent>-->
 
     <security>
       <requestFiltering>
