--- a/nISPackage/nISPackage.csproj
+++ b/nISPackage/nISPackage.csproj
@@ -81,6 +81,9 @@
       <DependentUpon>SettingsDialog.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="script.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\WixSharp.bin.1.14.8\build\WixSharp.bin.targets" Condition="Exists('..\packages\WixSharp.bin.1.14.8\build\WixSharp.bin.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
