--- a/API/API.csproj
+++ b/API/API.csproj
@@ -309,13 +309,16 @@
   <ItemGroup>
     <Content Include="libman.json" />
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\nis-api - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nis-api - ReadOnly - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nis-api - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - FTP1.pubxml" />
+    <None Include="Properties\PublishProfiles\nisqa-api - FTP2.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP1.pubxml" />
+    <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP2.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy.pubxml" />
     <Content Include="Properties\webjobs-list.json" />
     <Content Include="Resources\fonts\fontawesome-webfont.eot" />
@@ -329,6 +332,7 @@
     <Content Include="Resources\sampledata\currenttransactiondetail.json" />
     <Content Include="Resources\sampledata\savingtransactiondetail.json" />
     <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy1.pubxml" />
+    <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy2.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
