--- a/API/Web.config
+++ b/API/Web.config
@@ -15,7 +15,9 @@
     <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=nisProd;User ID=nis_admin;Password=Websym@123" />-->
 
     <!-- for QA Server -->
-    <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
+    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />-->
+
+    <add name="TenantManagerConnectionString" connectionString="{{DataBaseConnectionString}}" />
 
     <!-- for PRD Server -->
     <!--<add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
@@ -28,7 +30,7 @@
 
     <add key="UserForgotPasswordSubject" value="nIS - Reset password" />
     <add key="UserForgotPasswordMessage" value="Hello {0},&lt;br&gt;&lt;br&gt; Please click on below link to reset your account -&lt;br&gt;&lt;br&gt; {1}" />
-    
+
     <add key="SendPasswordMailToUserMessage" value="Hello {0},&lt;br&gt;&lt;br&gt; Please use below new password to login nIS portal -&lt;br&gt;&lt;br&gt; {1} &lt;br&gt;" />
 
     <add key="MailDisplayName" value="nIS Team" />
@@ -40,7 +42,8 @@
 
     <!-- for PRD Server -->
     <!--<add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />-->
-    <add key="ChangePasswordLink" value="http://nisqa-app.azurewebsites.net/confirmuser?token=" />
+
+    <add key="ChangePasswordLink" value="http://localhost:{{APPPORTNO}}/confirmuser?token=" />
 
     <!-- for QA Server -->
     <!--<add key="ChangePasswordLink" value="http://localhost:4200/confirmuser?token=" />-->
@@ -146,10 +149,10 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
 
-    <!--<staticContent>
+    <staticContent>
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
-    </staticContent>-->
+    </staticContent>
 
     <security>
       <requestFiltering>
