NIS packages changes

--- a/nISPackage/nISPackage.csproj
+++ b/nISPackage/nISPackage.csproj
@@ -229,6 +229,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="readme.txt" />
     <Content Include="script.sql" />
   </ItemGroup>
   <ItemGroup>
