API for tenant subscription

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -150,6 +150,7 @@
     <Compile Include="StatementPageContent.cs" />
     <Compile Include="TenantConfiguration.cs" />
     <Compile Include="TenantContact.cs" />
+    <Compile Include="TenantSubscription.cs" />
     <Compile Include="TenantUser.cs" />
     <Compile Include="TransactionData\CustomerMaster.cs" />
     <Compile Include="TransactionData\DataUsage.cs" />
