--- a/API/Web.config
+++ b/API/Web.config
@@ -12,7 +12,7 @@
   <connectionStrings>
 
     <!-- for Local Server -->
-    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_012;Initial Catalog=NISTest;User ID=sa;Password=Admin@123" />-->
+    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />-->
 
     <!-- for QA Server -->
     <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
@@ -41,9 +41,9 @@
     <add key="SMTPPort" value="587" />
 
     <!-- for PRD Server -->
-    <!--<add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />-->
+    <add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />
 
-    <add key="ChangePasswordLink" value="http://localhost:{{APPPORTNO}}/confirmuser?token=" />
+    <!--<add key="ChangePasswordLink" value="http://localhost:{{APPPORTNO}}/confirmuser?token=" />-->
 
     <!-- for QA Server -->
     <!--<add key="ChangePasswordLink" value="http://localhost:4200/confirmuser?token=" />-->
@@ -51,7 +51,7 @@
     <!--Teanant setup  -->
 
     <!-- for Local Server -->
-    <!--<add key="TenantSQLStorageAccount" value="Data Source=WSPL_LAP_008;Initial Catalog=nisProd;User ID=nis_admin;Password=Websym@123" />-->
+    <!--<add key="TenantSQLStorageAccount" value="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />-->
 
     <!-- for QA Server -->
     <add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
@@ -60,12 +60,11 @@
     <!--<add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
 
     <!--NodeJS-->
-    <add key="NodeJSAPIURL" value="http://192.168.100.7:3000/CreateDynamicVideo" />
     <add key="ThreadCountToGenerateStatementParallel" value="10" />
     <add key="MinimumArchivalPeriodDays" value="30" />
-    <add key="ThreadCountDynamicScene" value="1" />
-    <add key="ThreadInterval" value="15" />
+    
   </appSettings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" maxRequestLength="15728640" />
