Batch name added in statement search list

--- a/API/Web.config
+++ b/API/Web.config
@@ -41,9 +41,9 @@
     <add key="SMTPPort" value="587" />
 
     <!-- for PRD Server -->
-    <!--<add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />-->
+    <add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />
 
-    <add key="ChangePasswordLink" value="http://localhost:{{APPPORTNO}}/confirmuser?token=" />
+    <!--<add key="ChangePasswordLink" value="http://localhost:{{APPPORTNO}}/confirmuser?token=" />-->
 
     <!-- for QA Server -->
     <!--<add key="ChangePasswordLink" value="http://localhost:4200/confirmuser?token=" />-->
@@ -60,12 +60,10 @@
     <!--<add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
 
     <!--NodeJS-->
-    <add key="NodeJSAPIURL" value="http://192.168.100.7:3000/CreateDynamicVideo" />
     <add key="ThreadCountToGenerateStatementParallel" value="10" />
     <add key="MinimumArchivalPeriodDays" value="30" />
-    <add key="ThreadCountDynamicScene" value="1" />
-    <add key="ThreadInterval" value="15" />
   </appSettings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" maxRequestLength="15728640" />
@@ -149,10 +147,10 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
 
-    <!--<staticContent>
+    <staticContent>
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
-    </staticContent>-->
+    </staticContent>
 
     <security>
       <requestFiltering>
