PageType API Added

--- a/API/Web.config
+++ b/API/Web.config
@@ -12,10 +12,10 @@
   <connectionStrings>
 
     <!-- for Local Server -->
-    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_012;Initial Catalog=NISTest;User ID=sa;Password=Admin@123" />-->
+    <add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_012;Initial Catalog=NISTest;User ID=sa;Password=Admin@123" />
 
     <!-- for QA Server -->
-    <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
+    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />-->
 
     <!--<add name="TenantManagerConnectionString" connectionString="{{DataBaseConnectionString}}" />-->
 
@@ -46,7 +46,7 @@
     <!--<add key="ChangePasswordLink" value="http://localhost:{{APPPORTNO}}/confirmuser?token=" />-->
 
     <!-- for QA Server -->
-    <!--<add key="ChangePasswordLink" value="http://localhost:4200/confirmuser?token=" />-->
+    <add key="ChangePasswordLink" value="http://nisqa-app.azurewebsites.net/confirmuser?token=" />
 
     <!--Teanant setup  -->
 
