--- a/Exception/Exception.csproj
+++ b/Exception/Exception.csproj
@@ -83,6 +83,10 @@
     <Compile Include="Constants\ScheduleConstant.cs" />
     <Compile Include="Constants\RoleConstant.cs" />
     <Compile Include="Constants\UserConstant.cs" />
+    <Compile Include="PageType\PageTypeNotFoundException.cs" />
+    <Compile Include="PageType\PageTypeReferenceInPage.cs" />
+    <Compile Include="PageType\DuplicatePageTypeFoundException.cs" />
+    <Compile Include="PageType\InvalidPageTypeException.cs" />
     <Compile Include="ContactType\ContactTypeNotFoundException.cs" />
     <Compile Include="ContactType\ContactTypeReferenceInTenantContactException.cs" />
     <Compile Include="ContactType\DuplicateContactTypeFoundException.cs" />
