--- a/API/API.csproj
+++ b/API/API.csproj
@@ -279,6 +279,7 @@
     <Compile Include="Controllers\AnalyticsDataController.cs" />
     <Compile Include="Controllers\ArchivalProcessController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
+    <Compile Include="Controllers\PageTypeController.cs" />
     <Compile Include="Controllers\ContactTypeController.cs" />
     <Compile Include="Controllers\DynamicWidgetController.cs" />
     <Compile Include="Controllers\CountryController.cs" />
@@ -316,9 +317,11 @@
     <None Include="Properties\PublishProfiles\nisqa-api - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - FTP1.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - FTP2.pubxml" />
+    <None Include="Properties\PublishProfiles\nisqa-api - FTP3.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP1.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP2.pubxml" />
+    <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP3.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy.pubxml" />
     <Content Include="Properties\webjobs-list.json" />
     <Content Include="Resources\fonts\fontawesome-webfont.eot" />
@@ -333,6 +336,7 @@
     <Content Include="Resources\sampledata\savingtransactiondetail.json" />
     <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy1.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy2.pubxml" />
+    <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy3.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
