--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -103,7 +103,7 @@
     <Compile Include="Page.cs" />
     <Compile Include="PageWidget.cs" />
     <Compile Include="PageWidgetVistorData.cs" />
-    <Compile Include="ProductType.cs" />
+    <Compile Include="PageType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReminderAndRecommendation.cs" />
     <Compile Include="RenderEngine.cs" />
@@ -117,6 +117,7 @@
     <Compile Include="ScheduleLogDetailSearchParameter.cs" />
     <Compile Include="ScheduleLogErrorDetail.cs" />
     <Compile Include="ScheduleRunHistory.cs" />
+    <Compile Include="Search Parameter\PageTypeSearchParameter.cs" />
     <Compile Include="Search Parameter\BatchSearchParameter.cs" />
     <Compile Include="Search Parameter\DashboardReportSearchParameter.cs" />
     <Compile Include="Search Parameter\AssetLibrarySearchParameter.cs" />
