--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -376,6 +376,9 @@
     <Compile Include="View_StatementMetadataRecord.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="View_TenantSubscriptionRecord.cs">
+      <DependentUpon>NISDataContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="View_UserRecord.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
