retry failed cases logic move to schedule log manager from repository

--- a/API/Web.config
+++ b/API/Web.config
@@ -12,10 +12,10 @@
   <connectionStrings>
 
     <!-- for Local Server -->
-    <add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_012;Initial Catalog=NISTest;User ID=sa;Password=Admin@123" />
+    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_012;Initial Catalog=NISTest;User ID=sa;Password=Admin@123" />-->
 
     <!-- for QA Server -->
-    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />-->
+    <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
 
     <!--<add name="TenantManagerConnectionString" connectionString="{{DataBaseConnectionString}}" />-->
 
@@ -59,7 +59,6 @@
     <!-- for PRD Server -->
     <!--<add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
 
-    <!--NodeJS-->
     <add key="ThreadCountToGenerateStatementParallel" value="10" />
     <add key="MinimumArchivalPeriodDays" value="30" />
   </appSettings>
