--- a/API/Web.config
+++ b/API/Web.config
@@ -59,6 +59,7 @@
     <!-- for PRD Server -->
     <!--<add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
 
+    <add key="DefaultGenerateStatementApiUrl" value="http://127.0.0.1/GenerateStatementRenderEngine/" />
     <add key="ThreadCountToGenerateStatementParallel" value="5" />
     <add key="MinimumArchivalPeriodDays" value="30" />
   </appSettings>
