--- a/GenerateStatementRenderEngine/Web.config
+++ b/GenerateStatementRenderEngine/Web.config
@@ -6,13 +6,11 @@
 <configuration>
 
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 
   <connectionStrings>
-
-    <!-- for Local Server -->
-    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=nisProd;User ID=nis_admin;Password=Websym@123" />-->
 
     <!-- for QA Server -->
     <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
@@ -21,7 +19,7 @@
     <!--<add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
   </connectionStrings>
 
-  <appSettings>
+  <appSettings>    
     <add key="MailDisplayName" value="nIS Team" />
     <add key="FromEmailAddress" value="nis.n4mative@gmail.com" />
     <add key="FromEmailAddressPassword" value="Gauch022" />
