--- a/API/Web.config
+++ b/API/Web.config
@@ -41,7 +41,7 @@
     <add key="SMTPPort" value="587" />
 
     <!-- for PRD Server -->
-    <add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />
+    <!--<add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />-->
 
     <!--<add key="ChangePasswordLink" value="http://localhost:{{APPPORTNO}}/confirmuser?token=" />-->
 
